Fixed project post spacing on article sides

--- a/themes/hairline/src/sass/modules/_projects.scss
+++ b/themes/hairline/src/sass/modules/_projects.scss
@@ -53,6 +53,7 @@
 
 .project-post {
     @include clearfix;
+    width: auto;
 
     h1 {
         font-family: map-get($fonts, serif);
